Se agregaron nuevas funciones y tambien nuevas librerias . Casi esta listo el menu principal

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Galaga_enC C)
 set(CMAKE_C_STANDARD 99)
 
 add_executable(Galaga_enC main.c)
-add_executable(Menu menu/Instruccion.c menu/Instruccion.h menu/menu.h)
+add_executable(Menu menu/Instruccion.c menu/Instruccion.h menu/menu.h menu/como_jugar.c menu/como_jugar.h menu/menu.c)
 add_executable(pantalla interfaz/Inte_color_fondo.c interfaz/Inte_color_fondo.h)
